# pokemon

./: .README.md  .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE  Pokemon Trading.postman_collection.json  README.md  diesel.toml  rustfmt.toml
.github/workflows/: ci.yml
docker/: Dockerfile.api
kubernetes/: certificates.yaml  deployment.yaml  ingress.yaml  service.yaml
kubernetes/kibana/: elasticsearch-statefulset.yaml  elasticsearch-svc.yaml  fluentd-configmap.yaml  fluentd-daemonset.yaml  kibana.yaml
migrations/2022-01-02-181021_create-cards/: down.sql  up.sql
migrations/2022-01-03-025701_create-users/: up.sql
migrations/2022-01-03-030355_create-traders/: down.sql  up.sql
migrations/2022-01-03-030944_create-orders/: up.sql
migrations/2022-01-04-032525_create-trader-balance-log/: down.sql  up.sql
migrations/2022-01-04-040153_insert-into-cards/: down.sql  up.sql
pokemon_api/: Cargo.toml
pokemon_api/src/: config.rs  main.rs  router.rs  setup.rs  token.rs
pokemon_api/src/api_error/: from.rs  mod.rs  values.rs
pokemon_api/src/matchmaking/: post.rs
pokemon_api/src/prelude/: mod.rs  user_id.rs
pokemon_api/src/trader/: get.rs  mod.rs  post.rs  query.rs  req.rs  res.rs
pokemon_api/src/user/: mod.rs  post.rs  req.rs  res.rs
pokemon_infrastructure/: Cargo.toml
pokemon_infrastructure/src/: db_helper.rs  diesel_card_repo.rs  diesel_order_query_commands.rs  diesel_order_repo.rs  diesel_trader_balance_log_service.rs  diesel_trader_repo.rs  diesel_user_repo.rs  impl_matchmaking_service.rs  impl_send_buy_order_service.rs  impl_send_sell_order_service.rs  impl_user_service.rs  lib.rs
pokemon_model/: Cargo.toml
pokemon_model/src/: card.rs  card_price.rs  currency.rs  lib.rs  order.rs  trader.rs  user.rs
pokemon_model/src/dto/: card.rs  mod.rs  orders.rs  schema.rs  traders.rs  users.rs
pokemon_service/: Cargo.toml
pokemon_service/src/: card_repo.rs  domain_registry.rs  errors.rs  lib.rs  matchmaking_service.rs  order_query_commands.rs  order_repo.rs  send_buy_order_service.rs  send_sell_order_service.rs  trader_balance_log_service.rs  trader_repo.rs  user_repo.rs  user_service.rs
pokemon_test/: Cargo.toml
pokemon_test/src/: lib.rs  mock_card_repo.rs  mock_order_query_commands.rs  mock_order_repo.rs  mock_trader_balance_log_service.rs  mock_trader_repo.rs  mock_user_repo.rs  mock_user_service.rs
