[package]
edition = "2021"
name = "pokemon_api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.14"
actix-web-httpauth = "0.6.0-beta.5"
chrono = {version = "0.4", features = ["serde"]}
diesel = {version = "1.4", features = ["32-column-tables", "chrono", "postgres", "r2d2", "numeric"]}
dotenv = "0.15.0"
env_logger = "0.9"
envconfig = "0.10.0"
futures-util = "0.3"
itertools = "0.10"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0"

pokemon_infrastructure = {path = "../pokemon_infrastructure"}
pokemon_model = {path = "../pokemon_model"}
pokemon_service = {path = "../pokemon_service"}
pokemon_test = {path = "../pokemon_test"}
