[package]
edition = "2021"
name = "pokemon_service"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = {version = "0.4", features = ["serde"]}
diesel = {version = "1.4", features = ["32-column-tables", "chrono", "postgres", "r2d2", "numeric"]}
itertools = "0.9"
once_cell = "1.5"
r2d2 = "0.8"
thiserror = "1.0"

pokemon_model = {path = "../pokemon_model"}
