[package]
edition = "2021"
name = "pokemon_test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = {version = "0.4", features = ["serde"]}
itertools = "0.9"
log = "0.4"
once_cell = "1.5"
thiserror = "1.0"

pokemon_model = {path = "../pokemon_model"}
pokemon_service = {path = "../pokemon_service"}
